load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/mickael-carl/hue_exporter
gazelle(
    name = "gazelle",
)

go_library(
    name = "go_default_library",
    srcs = [
        "common.go",
        "hue_exporter.go",
        "lights.go",
        "sensors.go",
    ],
    importpath = "github.com/mickael-carl/hue_exporter",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_alecthomas_kingpin//:go_default_library",
        "@com_github_parnurzeal_gorequest//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
        "@com_github_prometheus_common//log:go_default_library",
    ],
)

go_binary(
    name = "hue_exporter",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
